@startuml
[*] --> Rest
Rest --> Moving : вызов на этаж
Rest --> Overloaded : загрузка выше предельного значения
Rest --> Powerless : отключение питания

Moving --> Rest : посещение этажа, очередь пуста
Moving --> Crashed : загрузка выше предельного значения
Moving --> Powerless : отключение питания

Overloaded --> Crashed : загрузка
Overloaded --> Moving : выгрузка меньше предельного значения, очередь не пуста
Overloaded --> Rest : выгрузка меньше предельного значения, очередь пуста
Overloaded --> Powerless : отключение питания

Powerless --> Overloaded : включение питания, вес выше предельного значения
Powerless --> Moving : включение питания, вес меньше предельного значения, очередь не пуста
Powerless --> Rest : включение питания, вес меньше предельного значения, очередь пуста

@enduml
